# mtg_finder

./: .gitignore  mtg.db  pyproject.toml  run.sh
data/perrie/: cards.csv  precon.csv  processed.csv
src/: download_assets.py  fetch_symbols.py  main.py
src/pages/: 1_search.py
src/utils/: Database.py  __init__.py  display.py
