[tool.poetry]
name = "mtg-finder"
version = "0.1.0"
description = ""
authors = ["Francis de Ladurantaye <fdl9044@gmail.com>"]
readme = "README.md"
packages = [{include = "mtg_finder", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
scrython = "^1.11.0"
pandas = "^1.5.3"
beautifulsoup4 = "^4.11.2"
requests = "^2.28.2"
lxml = "^4.9.2"
cairosvg = "^2.6.0"
streamlit = "^1.18.1"
tqdm = "^4.64.1"
elementpath = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
