[tool.poetry]
name = "mtg-finder"
version = "0.1.0"
description = ""
authors = ["Francis de Ladurantaye <f.deladurantaye@heyday.ai>"]
readme = "README.md"
packages = [{include = "mtg_finder"}]

[tool.poetry.dependencies]
python = "^3.11"
tqdm = "^4.65.0"
requests = "^2.28.2"
lxml = "^4.9.2"
beautifulsoup4 = "^4.11.2"
pandas = "^1.5.3"
scrython = "^1.11.0"
streamlit = "^1.19.0"
streamlit-searchbox = "^0.0.4"
stqdm = "^0.0.5"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
